[project]
name = "squid_app"
version = "0.1.0"
description = "Benchmarking application for the Squid Project"
authors = [
    {name="Ryan D. Lewis", email="ryan.lewis@anl.gov"}
]
requires-python = ">=3.8.1"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
homepage = "https://github.com/AD-SDL/rpl_lab"

[project.scripts]
squid_app = "squid_app:main"
